--- a/page_1.html
+++ b/page_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1</title>
+    <title>CEW +</title>
 </head>
 <body>
     <a href = "">Skip to Main Content</a>
@@ -11,17 +11,30 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li>Page 2</li>
-                <li>Page 3</li>
+                <li><a href = "page_1.html">CEW +</a></li>
+                <li><a href="page_2.html">CAPS</a></li>
+                <li><a href="page_3.html">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1>Academic Suport at UMSI</h1>
+        <h1>CEW + at UMSI</h1>
 
     </header>
     <main>
         <div>
-            <p>At the University of Michigan School of Information (UMSI), we are committed to supporting our students' academic success by offering a wide array of resources and services. Our academic advising team provides personalized guidance to help you navigate your curriculum, select courses, and address any academic challenges or questions you may encounter during your studies. UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework. Additionally, our specialized tutoring services and the UMSI Writing Center are available to support you in mastering complex subjects and enhancing your written communication skills. By utilizing these academic resources, UMSI students can thrive in their studies and achieve their educational goals. </p>
+            <h2>CEW + Mission:</h2>
+            <p>Placeholder</p>
+
+
+
+            <figure>
+                <img src="/images/MCOMMONS-YostArena_EXT.jpg" alt="University of Michigan Yost Arena">
+                <figcaption>Yost Arena</figcaption>
+            </figure>
+
+            <figure>
+                <img src="/images/MCOMMONS-BandRehearsal-2.jpg" alt="UUniversity of Michigan Band Rehearsing">
+                <figcaption>UM Band Rehersal</figcaption>
+            </figure>
 
         </div>
 
