--- a/page_3.html
+++ b/page_3.html
@@ -6,7 +6,7 @@
     <title>Food Pantry</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -19,7 +19,7 @@
         <h1>Food Pantry</h1>
 
     </header>
-    <main>
+    <main id="main">
         <div>
             <h2>Food Pantry Mission:</h2>
             <p>Placeholder</p>
