update iframe title

--- a/page_1.html
+++ b/page_1.html
@@ -77,7 +77,7 @@
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.9679377437365!2d-83.74734802174737!3d42.2792077712005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae3eee81227f%3A0xad3fb7b8f579e483!2sCenter%20for%20Education%20of%20Women%2C%20330%20E%20Liberty%20St%2C%20Ann%20Arbor%2C%20MI%2048104!5e0!3m2!1sen!2sus!4v1725847906130!5m2!1sen!2sus"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    referrerpolicy="no-referrer-when-downgrade" title="Map showing University of Michigan Center for Women"></iframe>
 
                 <p>Located centrally on the University of Michigan campus and open to all students and staff.</p>
             </article>
