--- a/page_3.html
+++ b/page_3.html
@@ -29,7 +29,7 @@
             <iframe width="640" height="360" src="https://www.youtube.com/embed/ksqfEgX8KJg"
                 title="Maize and Blue Cupboard Mission" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen title="Youtube Video of the Maize and Blue Cupboard"></iframe>
 
             <p>Your resource for addressing food insecurity within the University of Michigan community.</p>
             <p>We offer access to essential food, hygiene products, and educational programs. Here's an overview of the
@@ -80,7 +80,7 @@
                 <h3>Location</h3>
                 <p>MBC is located in the basement of Betsy Barbour Residence Hall, providing convenient access from
                     central campus.</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2952.057572853614!2d-83.74414012174726!3d42.27729437120112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883caf7a120492b5%3A0x8682fa2c89234008!2sMaize%20and%20Blue%20Cupboard!5e0!3m2!1sen!2sus!4v1725846983010!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2952.057572853614!2d-83.74414012174726!3d42.27729437120112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883caf7a120492b5%3A0x8682fa2c89234008!2sMaize%20and%20Blue%20Cupboard!5e0!3m2!1sen!2sus!4v1725846983010!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing University of Michigan Maize and Blue Cupboard"></iframe>
             </article>
             <article>
                 <h3>Shopping by Appointment</h3>
