--- a/page_2.html
+++ b/page_2.html
@@ -81,7 +81,12 @@
             <p>Here's how to access CAPS services:</p>
             <article>
                 <h3>Location</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.9319731547366!2d-83.74901532174715!3d42.279975471200494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae443f1340a1%3A0x7ffbd758838a3516!2sUniversity%20of%20Michigan%20Psychological%20Clinic!5e0!3m2!1sen!2sus!4v1725847042351!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.9319731547366!2d-83.74901532174715!3d42.279975471200494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae443f1340a1%3A0x7ffbd758838a3516!2sUniversity%20of%20Michigan%20Psychological%20Clinic!5e0!3m2!1sen!2sus!4v1725847042351!5m2!1sen!2sus"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                    title="Map showing University of Michigan Psychological Clinic"></iframe>
+
                 <p>Located on central campus, with virtual consultation options available for all students.</p>
             </article>
             <article>
