remove redundant title, rename files

--- a/page_3.html
+++ b/page_3.html
@@ -10,7 +10,7 @@
 <body>
     <a href="#main">Skip to Main Content</a>
     <header>
-        <img src="images/MBC Logo.jpg" alt="Maize and Blue Cupboard Logo">
+        <img src="images/MBC-Logo.jpg" alt="Maize and Blue Cupboard Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -27,9 +27,9 @@
         <section>
             <h2>Welcome to Maize & Blue Cupboard (MBC)</h2>
             <iframe width="640" height="360" src="https://www.youtube.com/embed/ksqfEgX8KJg"
-                title="Maize and Blue Cupboard Mission" frameborder="0"
+                title="Maize and Blue Cupboard Mission" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen title="Youtube Video of the Maize and Blue Cupboard"></iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             <p>Your resource for addressing food insecurity within the University of Michigan community.</p>
             <p>We offer access to essential food, hygiene products, and educational programs. Here's an overview of the
@@ -48,7 +48,7 @@
             <p>Maize & Blue Cupboard offers a variety of services to support food security:</p>
 
             <figure>
-                <img src="images/MCOMMONS DSC03396.jpg" alt="A student picking up food from a table.">
+                <img src="images/MCOMMONS-DSC03396.jpg" alt="A student picking up food from a table.">
                 <figcaption>A student picking up food from a table!</figcaption>
             </figure>
 
@@ -71,7 +71,7 @@
             <h2>Accessing MBC</h2>
 
             <figure>
-                <img src="images/MCOMMONS DSC03486.jpg" alt="A student taking food from a table.">
+                <img src="images/MCOMMONS-DSC03486.jpg" alt="A student taking food from a table.">
                 <figcaption>More free food!</figcaption>
             </figure>
 
