update caps page content

--- a/page_2.html
+++ b/page_2.html
@@ -73,10 +73,10 @@
         <section>
             <h2>Accessing CAPS</h2>
 
-            <!-- <figure>
-                <img src="images/example2.jpg" alt="Placeholder Image">
-                <figcaption>Placeholder for CAPS Services</figcaption>
-            </figure> -->
+            <figure>
+                <img src="images/UMSI_JesseJohnstonClass_02.jpg" alt="Professor speaking to his students">
+                <figcaption>Group Counseling Services</figcaption>
+            </figure>
 
             <p>Here's how to access CAPS services:</p>
             <article>
