--- a/page_3.html
+++ b/page_3.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Food Pantry</title>
 </head>
 
 <body>
-    <a href="#main">Skip to Main Content</a>
+    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
     <header>
         <img src="images/MBC-Logo.jpg" alt="Maize and Blue Cupboard Logo">
         <nav>
