--- a/page_1.html
+++ b/page_1.html
@@ -9,16 +9,28 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>CEW +</title>
 </head>
 
 <body>
-    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
+
     <header>
-        <img src="images/cew-logo.png" alt="UM CEW+ Logo">
-        <nav>
+        <img id="logo" src="images/block-m-hex.png" alt="UMSI Logo">
+
+        <h1 id="website-title"> CEW+ </h1>
+
+        <a class="menu-icon" href="#nav">
+            <span class="material-icons md-36">menu</span>
+            <span class="menu-text">Menu</span>
+        </a>
+        <nav id="nav">
+            <a class="menu-close" href="#">
+                <span class="material-icons md-36">close</span>
+            </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="page_1.html">CEW +</a></li>
@@ -26,9 +38,8 @@
                 <li><a href="page_3.html">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1>CEW + at UMSI</h1>
-
     </header>
+
     <main id="main">
         <section>
             <h2>Welcome to CEW+</h2>
@@ -81,10 +92,13 @@
             <p>Here's how to access CEW+ services:</p>
             <article>
                 <h3>Location</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.9679377437365!2d-83.74734802174737!3d42.2792077712005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae3eee81227f%3A0xad3fb7b8f579e483!2sCenter%20for%20Education%20of%20Women%2C%20330%20E%20Liberty%20St%2C%20Ann%20Arbor%2C%20MI%2048104!5e0!3m2!1sen!2sus!4v1725847906130!5m2!1sen!2sus"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade" title="Map showing University of Michigan Center for Women"></iframe>
+                <div class="responsive-iframe">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.9679377437365!2d-83.74734802174737!3d42.2792077712005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae3eee81227f%3A0xad3fb7b8f579e483!2sCenter%20for%20Education%20of%20Women%2C%20330%20E%20Liberty%20St%2C%20Ann%20Arbor%2C%20MI%2048104!5e0!3m2!1sen!2sus!4v1725847906130!5m2!1sen!2sus"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="Map showing University of Michigan Center for Women"></iframe>
+                </div>
 
                 <p>Located centrally on the University of Michigan campus and open to all students and staff.</p>
             </article>
