--- a/page_2.html
+++ b/page_2.html
@@ -9,16 +9,27 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>CAPS</title>
 </head>
 
 <body>
-    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
-        <img src="images/CAPS-logo.png" alt="UM CAPS Logo">
-        <nav>
+        <img id="logo" src="images/block-m-hex.png" alt="UMSI Logo">
+
+        <h1 id="website-title">CAPS </h1>
+
+        <a class="menu-icon" href="#nav">
+            <span class="material-icons md-36">menu</span>
+            <span class="menu-text">Menu</span>
+        </a>
+        <nav id="nav">
+            <a class="menu-close" href="#">
+                <span class="material-icons md-36">close</span>
+            </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="page_1.html">CEW +</a></li>
@@ -26,7 +37,6 @@
                 <li><a href="page_3.html">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1>CAPS</h1>
 
     </header>
 
@@ -88,11 +98,13 @@
             <p>Here's how to access CAPS services:</p>
             <article>
                 <h3>Location</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.9319731547366!2d-83.74901532174715!3d42.279975471200494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae443f1340a1%3A0x7ffbd758838a3516!2sUniversity%20of%20Michigan%20Psychological%20Clinic!5e0!3m2!1sen!2sus!4v1725847042351!5m2!1sen!2sus"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                    title="Map showing University of Michigan Psychological Clinic"></iframe>
+                <div class="responsive-iframe">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.9319731547366!2d-83.74901532174715!3d42.279975471200494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae443f1340a1%3A0x7ffbd758838a3516!2sUniversity%20of%20Michigan%20Psychological%20Clinic!5e0!3m2!1sen!2sus!4v1725847042351!5m2!1sen!2sus"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="Map showing University of Michigan Psychological Clinic"></iframe>
+                </div>
 
                 <p>Located on central campus, with virtual consultation options available for all students.</p>
             </article>
