--- a/page_3.html
+++ b/page_3.html
@@ -9,16 +9,27 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Food Pantry</title>
 </head>
 
 <body>
-    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
-        <img src="images/MBC-Logo.jpg" alt="Maize and Blue Cupboard Logo">
-        <nav>
+        <img id="logo" src="images/block-m-hex.png" alt="UMSI Logo">
+
+        <h1 id="website-title">Maize & Blue Cupboard</h1>
+
+        <a class="menu-icon" href="#nav">
+            <span class="material-icons md-36">menu</span>
+            <span class="menu-text">Menu</span>
+        </a>
+        <nav id="nav">
+            <a class="menu-close" href="#">
+                <span class="material-icons md-36">close</span>
+            </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="page_1.html">CEW +</a></li>
@@ -26,17 +37,18 @@
                 <li><a href="page_3.html">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1>Food Pantry</h1>
 
     </header>
 
     <main id="main">
         <section>
             <h2>Welcome to Maize & Blue Cupboard (MBC)</h2>
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/ksqfEgX8KJg"
-                title="Maize and Blue Cupboard Mission" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="responsive-iframe">
+                <iframe width="640" height="360" src="https://www.youtube.com/embed/ksqfEgX8KJg"
+                    title="Maize and Blue Cupboard Mission"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
 
             <p>Your resource for addressing food insecurity within the University of Michigan community.</p>
             <p>We offer access to essential food, hygiene products, and educational programs. Here's an overview of the
@@ -87,7 +99,13 @@
                 <h3>Location</h3>
                 <p>MBC is located in the basement of Betsy Barbour Residence Hall, providing convenient access from
                     central campus.</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2952.057572853614!2d-83.74414012174726!3d42.27729437120112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883caf7a120492b5%3A0x8682fa2c89234008!2sMaize%20and%20Blue%20Cupboard!5e0!3m2!1sen!2sus!4v1725846983010!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing University of Michigan Maize and Blue Cupboard"></iframe>
+                <div class="responsive-iframe">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2952.057572853614!2d-83.74414012174726!3d42.27729437120112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883caf7a120492b5%3A0x8682fa2c89234008!2sMaize%20and%20Blue%20Cupboard!5e0!3m2!1sen!2sus!4v1725846983010!5m2!1sen!2sus"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="Map showing University of Michigan Maize and Blue Cupboard"></iframe>
+                </div>
             </article>
             <article>
                 <h3>Shopping by Appointment</h3>
