--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     </header>
 
     <main class="container" id="main">
+        <button id="back-to-top">Back to top</button>
+
         <section class="overview">
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
@@ -127,10 +129,12 @@
         </section>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a
+        <p> © Copyrights <span id="year"></span> by MSI Academic Advising | <a
                 href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
                 Advising </a></p>
     </footer>
 </body>
+
+<script src="js/main.js"></script>
 
 </html>
