--- a/page_1.html
+++ b/page_1.html
@@ -40,8 +40,10 @@
         </nav>
     </header>
 
-    <main id="main">
-        <section>
+    <main class="container" id="main">
+        <button id="back-to-top">Back to top</button>
+
+        <section class="overview">
             <h2>Welcome to CEW+</h2>
             <p>Supporting women, underserved communities, and nontraditional students at the University of Michigan.</p>
             <p>CEW+ offers career development, counseling, financial aid, and leadership programs to foster professional
@@ -134,11 +136,13 @@
     </main>
 
     <footer>
-        <p>MSI Academic Advising | <a
+        <p> © Copyrights <span id="year"></span> by MSI Academic Advising | <a
                 href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
                 Advising </a></p>
     </footer>
 
 </body>
+
+<script src="js/main.js"></script>
 
 </html>
