--- a/page_2.html
+++ b/page_2.html
@@ -40,8 +40,10 @@
 
     </header>
 
-    <main id="main">
-        <section>
+    <main class="container" id="main">
+        <button id="back-to-top">Back to top</button>
+
+        <section class="overview">
             <h2>Welcome to CAPS</h2>
             <p>Counseling and Psychological Services (CAPS) provides mental health support to University of Michigan
                 students.</p>
@@ -140,11 +142,11 @@
 
 
     <footer>
-        <p>MSI Academic Advising | <a
+        <p> © Copyrights <span id="year"></span> by MSI Academic Advising | <a
                 href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
                 Advising </a></p>
     </footer>
 
 </body>
-
+<script src="js/main.js"></script>
 </html>
