--- a/page_3.html
+++ b/page_3.html
@@ -40,8 +40,10 @@
 
     </header>
 
-    <main id="main">
-        <section>
+    <main class="container" id="main">
+        <button id="back-to-top">Back to top</button>
+
+        <section class="overview">
             <h2>Welcome to Maize & Blue Cupboard (MBC)</h2>
             <div class="responsive-iframe">
                 <iframe width="640" height="360" src="https://www.youtube.com/embed/ksqfEgX8KJg"
@@ -141,11 +143,11 @@
 
 
     <footer>
-        <p>MSI Academic Advising | <a
+        <p> © Copyrights <span id="year"></span> by MSI Academic Advising | <a
                 href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
                 Advising </a></p>
     </footer>
 
 </body>
-
+<script src="js/main.js"></script>
 </html>
